[package]
name = "bin"
version = "1.0.2"
description = "a paste bin."
repository = "https://github.com/w4/bin"
license = "WTFPL OR 0BSD"
authors = ["Jordan Doyle <jordan@doyle.la>"]
edition = "2018"

[dependencies]
owning_ref = "0.4.0"
linked-hash-map = "0.5.0"
rocket = { version = "0.4.2", default-features = false }
askama = "0.8.0"
lazy_static = "1.2.0"
rand = { version = "0.6.0", features = ["nightly"] }
gpw = "0.1.0"
syntect = "3.0.0"
serde_derive = "1.0.0"

[profile.release]
lto = true
codegen-units = 1
incremental = false

[badges]
travis-ci = { repository = "w4/bin" }
is-it-maintained-issue-resolution = { repository = "w4/bin" }
is-it-maintained-open-issues = { repository = "w4/bin" }
maintenance = { status = "passively-maintained" }
